# crm-agent-system

./: .gitignore  Procfile  README.md  gui_app.py  project-structure.py  pyproject.toml  python gui_app.py  requirements.txt  start.sh  test.py  test_mail.py
app/: gui_app.py
app/agents/: email_agent.py  hubspot_agent.py  orchestrator_agent.py
app/config/: config.json
app/templates/: index.html
app/tools/: email_tools.py  hubspot_tools.py
