[project]
name = "agent-assasment-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "hubspot-api-client>=12.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langgraph>=0.5.1",
    "ollama>=0.5.1",
    "param>=2.2.1",
]
